# RfgToolsPlusPlus

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  GitSubmodule.cmake  README.md
Common/: CMakeLists.txt
Common/common/: Defer.h  Handle.h  String.h  Typedefs.h
Common/common/concurrency/: Parallel.h
Common/common/filesystem/: File.cpp  File.h  Path.cpp  Path.h
Common/common/memory/: Span.h
Common/common/string/: String.cpp  String.h
Common/common/timing/: Timer.cpp  Timer.h
Documentation/: Packfile.md
RfgTools++/: CMakeLists.txt
RfgTools++/RfgTools++/compression/: Compression.cpp  Compression.h
RfgTools++/RfgTools++/ext/: gltf.h
RfgTools++/RfgTools++/formats/asm/: AsmContainer.h  AsmEnums.h  AsmFile5.cpp  AsmFile5.h  AsmPrimitive.h
RfgTools++/RfgTools++/formats/localization/: LocalizationFile3.cpp  LocalizationFile3.h
RfgTools++/RfgTools++/formats/meshes/: ChunkMesh.cpp  ChunkMesh.h  ChunkTypes.h  IndexBufferData.h  MaterialBlock.h  MaterialConstant.h  MaterialData.h  MeshDataBlock.h  MeshEnums.cpp  MeshEnums.h  MeshHeaderShared.h  MeshHelpers.cpp  MeshHelpers.h  RenderBlock.h  RfgMaterial.h  SidemapMaterial.h  StaticMesh.cpp  StaticMesh.h  SubmeshData.h  Terrain.cpp  Terrain.h  TerrainData.h  TerrainLowLod.cpp  TerrainLowLod.h  TerrainStitchInfo.h  TerrainTypes.h  TextureDesc.h  Undergrowth.h  VertexBufferData.h
RfgTools++/RfgTools++/formats/packfiles/: Packfile3.cpp  Packfile3.h  Packfile3Entry.cpp  Packfile3Entry.h  Packfile3Header.cpp  Packfile3Header.h
RfgTools++/RfgTools++/formats/textures/: PegEntry10.h  PegFile10.cpp  PegFile10.h  PegFormat.h  TextureFlags.h
RfgTools++/RfgTools++/formats/zones/: ZoneFile.cpp  ZoneFile.h  ZoneObject.cpp  ZoneObject36.cpp  ZoneObject36.h  ZoneObjectProperty.cpp  ZonePc36.cpp  ZonePc36.h  ZonePcHeader36.h  ZonePcRelationData36.h  ZoneProperties.h
RfgTools++/RfgTools++/formats/zones/properties/: IZoneProperty.h  PropertyManager.cpp  PropertyManager.h
RfgTools++/RfgTools++/formats/zones/properties/compound/: BoundingBoxProperty.h  ListProperty.h  Matrix33Property.h  OpProperty.h  Vec3Property.h
RfgTools++/RfgTools++/formats/zones/properties/primitive/: BoolProperty.h  FloatProperty.h  StringProperty.h  UintProperty.h
RfgTools++/RfgTools++/formats/zones/properties/special/: DistrictFlagsProperty.h  NavpointDataProperty.h  UnknownTypeProperty.h
RfgTools++/RfgTools++/hashes/: Hash.cpp  Hash.h  HashGuesser.cpp  HashGuesser.h
RfgTools++/RfgTools++/types/: Mat3.h  Mat4.h  Mat4x3.h  Vec2.h  Vec3.h  Vec4.h
Test App/: CMakeLists.txt  ChunkTypes.h  main.cpp
